--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "phaser3-webpack-template",
+  "name": "phaser3-capacitor-template",
   "version": "1.0.0",
   "description": "Phaser 3 project template for Phaser Editor 2D v3",
   "main": "webpack.config.js",
@@ -8,14 +8,18 @@
     "build": "webpack --mode=production && phaser-asset-pack-hashing -r dist",
     "editor": "phasereditor2d-launcher -project . -port 1959",
     "editor-remote": "phasereditor2d-launcher -project . -disable-open-browser -public -port 1959",
+    "build-android": "npm run build && cap sync && cd android && ./gradlew clean && ./gradlew assemble",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Phaser Editor 2D <developers@phasereditor2d.com> (https://phasereditor2d.com/)",
   "license": "MIT",
   "dependencies": {
+    "@capacitor/android": "^3.4.3",
+    "@capacitor/core": "^3.4.3",
     "phaser": "^3.55.0"
   },
   "devDependencies": {
+    "@capacitor/cli": "^3.4.3",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^8.1.0",
     "html-webpack-plugin": "^5.3.1",
