Updates phaser editor config file for capacitor.

--- a/phasereditor2d.config.json
+++ b/phasereditor2d.config.json
@@ -1,7 +1,8 @@
 {
     "plugins": [],
     "skip": [
-        "dist"
+        "dist",
+        "android"
     ],
     "playUrl": "http://localhost:8080"
 }
