Removes "ios" folder from the phaser editor project.

--- a/phasereditor2d.config.json
+++ b/phasereditor2d.config.json
@@ -2,7 +2,8 @@
     "plugins": [],
     "skip": [
         "dist",
-        "android"
+        "android",
+        "ios"
     ],
     "playUrl": "http://localhost:8080"
 }
